fix: layout shift

--- a/packages/client/src/app.css
+++ b/packages/client/src/app.css
@@ -227,6 +227,10 @@ button {
   animation: strobe 240ms steps(1, end) 3;
 }
 
+a {
+  text-decoration: none;
+}
+
 @keyframes strobe {
   50% {
     opacity: 0;
